--- a/HiddenFileToggle/Base.lproj/MainMenu.xib
+++ b/HiddenFileToggle/Base.lproj/MainMenu.xib
@@ -13,6 +13,7 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="HiddenFileToggle" customModuleProvider="target">
             <connections>
+                <outlet property="statusMenu" destination="y5h-yQ-FDa" id="fOu-wM-2Rk"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
